[package]
name = "wei-env"
version = "0.2.9"
edition = "2021"
description = "wei env"
documentation = "https://github.com/zuiyue-com/wei-env"
homepage = "https://github.com/zuiyue-com/wei-env"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5"